--- a/src/components/Home/styles/home-styles.css
+++ b/src/components/Home/styles/home-styles.css
@@ -91,6 +91,10 @@ h1.title {
   font-family: 'Bodoni Moda', serif;
 }
 
+h2.title {
+  font-size: 1.5rem;
+}
+
 h2.subtitle {
   color: #ededed;
   font-size: 1.5rem;
@@ -99,6 +103,10 @@ h2.subtitle {
   
   @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,wght@1,600&display=swap');
   font-family: 'Bodoni Moda', serif;
+}
+
+h3.subtitle {
+  font-size: .99rem;
 }
 
 h6.subtitle {
