--- a/src/components/HomeNew/TestHome.css
+++ b/src/components/HomeNew/TestHome.css
@@ -21,7 +21,7 @@ html {
 
 .hero {
   background-image: url(https://picsum.photos/id/381/1920/1080);
-  background: linear-gradient(rgba(31, 44, 108, 0.65), rgba(31, 44, 108, 0.65)), rgba(0, 0, 0, 0.55) url("https://picsum.photos/id/381/1920/1080") no-repeat;
+  background: linear-gradient(rgba(31, 44, 108, 0.65), rgba(31, 44, 108, 0.65)), rgba(0, 0, 0, 0.55) url("https://images.unsplash.com/photo-1606859309981-270838d57ed8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1489&q=80") no-repeat;
   background-attachment: fixed;
   background-size: cover;
   color: white;
@@ -91,6 +91,7 @@ html {
   transition: all .2s ease-in-out;
   border-bottom: 2px solid #1f2c6c;
 }
+
 
 .main-content {
   padding-top: 2rem;
