applied contrast color to ScrollToTop icon

--- a/src/components/Scroll-To-Top-Button/Scroll-To-Top-Button.css
+++ b/src/components/Scroll-To-Top-Button/Scroll-To-Top-Button.css
@@ -4,6 +4,7 @@
     right: 0.5rem;
     animation: fadeIn 700ms ease-in-out 1s both;
     cursor: pointer;
+    color: rgb(41, 184, 245);
   }
   
 #toTopIcon {
