--- a/src/components/HomeNew/TestHome.css
+++ b/src/components/HomeNew/TestHome.css
@@ -107,6 +107,9 @@ html {
 .main-content .section-dark.resume {
   height: 400px;
   padding-top: 100px;
+  color: #3c4172;
+
+  background-color: #c8c1c1;
 }
 
 @media (max-width: 599px) {
