changed Resume background color

--- a/src/components/HomeNew/TestHome.css
+++ b/src/components/HomeNew/TestHome.css
@@ -109,7 +109,7 @@ html {
   padding-top: 100px;
   color: #3c4172;
 
-  background-color: #c8c1c1;
+  background-color: #bdbdbd;
 }
 
 @media (max-width: 599px) {
