Font color changed for Resume component

--- a/src/components/HomeNew/TestHome.css
+++ b/src/components/HomeNew/TestHome.css
@@ -108,8 +108,11 @@ html {
   height: 400px;
   padding-top: 100px;
   color: #3c4172;
-
   background-color: #bdbdbd;
+}
+
+#resume-subtitle {
+  color: #3c4172;
 }
 
 @media (max-width: 599px) {
