--- a/src/components/HomeNew/TestHome.css
+++ b/src/components/HomeNew/TestHome.css
@@ -360,3 +360,8 @@ body.preloader-site {
 div.Header-Component {
     background-color: rgba(196, 102, 102, 0);
   }
+
+  #myWorkCard {
+    border-radius: 10px;
+    box-shadow: 0 14px 22px 0 rgba(0, 0, 0, 0.641), 0 18px 46px 0 rgba(0, 0, 0, 0.614);;
+  }
