--- a/src/components/HomeNew/TestHome.css
+++ b/src/components/HomeNew/TestHome.css
@@ -24,7 +24,7 @@ html {
   background: linear-gradient(rgba(31, 44, 108, 0.65), rgba(31, 44, 108, 0.65)), rgba(0, 0, 0, 0.55) url("https://images.unsplash.com/photo-1606859309981-270838d57ed8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1489&q=80") no-repeat;
   background-attachment: fixed;
   background-size: cover;
-  color: white;
+  color: whitesmoke;
   box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   font-family: 'Poppins', sans-serif;
   /* min-height: 100%; */
@@ -65,7 +65,7 @@ html {
 
 .hero .hero-foot {
   height: 50px;
-  background: white;
+  background: whitesmoke;
   box-shadow: 0 2px 15px rgba(0, 0, 0, 0.082);
 }
 
@@ -292,12 +292,12 @@ img#aboutMeImage.is-round.image  {
   bottom: 0;
   width: 100vw;
   padding: 0;
-  height: 80px;
+  height: 10px;
   line-height: 25px;
   text-align: center;
-  background: #1f2c6c;
+  background: #f4f4f5;
   color: rgb(7, 7, 7);
-  padding-top: 2rem;
+  padding-top: .25rem;
   font-size: .5rem;
 }
 
